k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: auth
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: keycloak
